Ran Cleanup. Time taken in seconds: 7394